--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">=8.0.0",
     "yiisoft/yii2": ">=2.0.6",
-    "ext-json": "*"
+    "ext-json": "*",
+    "brezgalov/php-typed-collection": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
