--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,9 @@
   ],
   "require": {
     "php": ">=8.0.0",
-    "yiisoft/yii2": ">=2.0.6",
     "ext-json": "*",
+    "yiisoft/yii2": ">=2.0.6",
+    "yiisoft/yii2-httpclient": ">=2.0.14",
     "brezgalov/php-typed-collection": "dev-master"
   },
   "require-dev": {
